Update z-Index to fix layering changes caused by adding a background image on home page

--- a/app/assets/styles/modules/_footer.css
+++ b/app/assets/styles/modules/_footer.css
@@ -6,6 +6,7 @@
   left: 0;
   right: 0;
   padding: 15px 0 5px 0;
+  z-index: $zIndex-4-FourthLevel;
 
   a {
     color: $bodyLiteBGFontColor;
